--- a/css/monkey.css
+++ b/css/monkey.css
@@ -10,7 +10,7 @@ html {
 }
 
 /* Write your solution here */
-@@media screen and (max-width: 1250px) {
+@media screen and (max-width: 1250px) {
   #monkey {
     top: -20px;
   }
