--- a/css/ostrich.css
+++ b/css/ostrich.css
@@ -9,4 +9,15 @@ html {
 }
 
 /* Write your solution here */
+@media screen and (max-width: 1400px) {
+  #ostrich {
+    top: -60px;
+    transition: top 0.5s;
+  }
+}
 
+@media screen and (max-width: 1100px) {
+  #ostrich {
+    top: 50px;
+  }
+}
